# Prac-Link

./: .gitignore  README.md
client/: .gitignore  README.md
server/: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
server/app/: events.py
server/app/api/: __init__.py
server/app/api/routes/: chat_members.py  chats.py  courses.py  documents.py  groups.py  messages.py  practice.py  practice_registrations.py  reset.py  roles.py  student_groups.py  users.py  years.py
server/app/schemas/input/: chat_members.py  chats.py  courses.py  groups.py  messages.py  practice.py  practice_registrations.py  roles.py  student_groups.py  users.py  years.py
server/app/schemas/output/: chats.py  messages.py  practice.py  roles.py  users.py  years.py
server/config/: logging_config.json
server/config/database/: database_config.json  tables_config.json
server/config/database/queries/: chat_members.json  chats.json  courses.json  documents.json  groups.json  messages.json  practice_bases.json  practice_registrations.json  roles.json  student_groups.json  user_roles.json  users.json  years.json
server/data-base/: README.md  pyproject.toml
server/data-base/src/data_base/: __init__.py
server/data-base/src/data_base/_config/: config_bootstrapper.py
server/data-base/src/data_base/_infrastructure/: base_aiorepository.py  database_wrapper.py
server/data-base/src/data_base/_shared/: exceptions.py
server/data-base/src/data_base/core/: database.py  database_builder.py
server/file-work/: pyproject.toml
server/file-work/src/file_work/: __init__.py
server/file-work/src/file_work/_handlers/: base_handler.py  binary_handler.py  csv_handler.py  json_handler.py
server/file-work/src/file_work/_internal/: handler_factory.py
server/file-work/src/file_work/_utils/: path_utils.py
server/file-work/src/file_work/core/: file_handler.py
server/log-manager/: pyproject.toml
server/log-manager/src/log_manager/: __init__.py
server/scripts/: insert_test_data_1.sh  insert_test_data_2.sh
(+82 files in other folders)
