[project]
name = "server-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "John Doe",email = "john@doe.com"}
]
requires-python = ">=3.13"

[tool.poetry.dependencies]
fastapi = "^0.115.12"
uvicorn = { extras = ["standard"], version = "^0.34.3" }
pydantic = {extras = ["email"], version = "^2.11.6"}
data-base = { path = "./data-base", develop = true}
log-manager = { path = "./log-manager", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
exclude = ["README.md"]