[project]
name = "file-work"
version = "0.3.6"
description = ""
authors = [
    {name = "John Doe",email = "john@doe.com"}
]
readme = "README.md"
requires-python = ">=3.13"
packages = [
    {include = "file_work", from = "src"},
]
dependencies = [
]

[tool.poetry.extras]
csv = ["pandas"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"