[project]
name = "log-manager"
version = "0.2.0"
description = ""
authors = [
    {name = "John Doe",email = "john@doe.com"}
]
readme = "README.md"
requires-python = ">=3.13"
packages = [
    {include = "log_manager", from = "src"}
]
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"